# wasm-ast

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  lint.yml  release.yml
benches/: emit_module.rs
examples/: addative_hello_world.rs  hello_world.rs
src/: lib.rs
src/emitter/: errors.rs  instruction.rs  mod.rs  module.rs  sections.rs  types.rs  values.rs
src/encoder/: mod.rs
src/leb128/: errors.rs  mod.rs
src/model/: builder.rs  errors.rs  indices.rs  instruction.rs  mod.rs  module.rs  types.rs  values.rs
src/parser/: errors.rs  instructions.rs  mod.rs  module.rs  sections.rs  types.rs  values.rs
