[package]
name = "wasm-ast"
description = "A WebAssembly syntax model useful for generate, reading, and emitting WebAssembly code."
version = "0.0.4"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/wasm-ast"
repository = "https://github.com/misalcedo/wasm-ast"
documentation = "https://docs.rs/wasm-ast"

[dependencies]
nom = { version = "7", optional = true }
thiserror = "1"
wat = { version = "1", optional = true }

[features]
default = []
parser = ["nom"]
text = ["parser", "wat"]